--- a/notebooks/kubeflow_pipelines/cicd/labs/cloudbuild_vertex.yaml
+++ b/notebooks/kubeflow_pipelines/cicd/labs/cloudbuild_vertex.yaml
@@ -40,9 +40,9 @@ steps:
   args:
   - '-c'
   - |
-    python run_pipeline.py --project_id $PROJECT_ID --region $_REGION --template_path $_PIPELINE_FOLDER/pipeline_vertex/covertype_kfp_pipeline.json --display_name covertype-kfp-with-cloudbuild 
+    python kfp-cli_vertex/run_pipeline.py --project_id $PROJECT_ID --region $_REGION --template_path pipeline_vertex/covertype_kfp_pipeline.json --display_name covertype-kfp-with-cloudbuild 
     # coverype_kfp_pipeline
-  dir: $_PIPELINE_FOLDER/kfp-cli_vertex
+  dir: $_PIPELINE_FOLDER
     
 # # Push the images to Container Registry
 # TODO: List the images to be pushed to the project Docker registry
