--- a/notebooks/tfx_pipelines/cicd/labs/cloudbuild_vertex.yaml
+++ b/notebooks/tfx_pipelines/cicd/labs/cloudbuild_vertex.yaml
@@ -21,14 +21,11 @@
 
 
 steps:
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['ls', '-a' ]
-  #dir: pipeline_vertex
 
-## Build the image that encapsulates the TFX pipeline.
-#- name: 'gcr.io/cloud-builders/docker'
-#  args: ['build', '-t', 'gcr.io/$PROJECT_ID/tfxcovertype', '.']
-#  dir: pipeline_vertex
+# Build the image that encapsulates the TFX pipeline.
+- name: 'gcr.io/cloud-builders/docker'
+ args: ['build', '-t', 'gcr.io/$PROJECT_ID/tfxcovertype', '.']
+ dir: pipeline_vertex
 #
 ## Compile the TFX pipeline
 #- name: 'gcr.io/$PROJECT_ID/tfx-cli_vertex'
